Curve modifier does not update in realtime in object mode #59785

Closed
opened 2018-12-23 07:39:35 +01:00 by Alaska · 5 comments
Member

System Information
CPU: Ryzen 5 2600
GPU: RX 570 4GB
OS: Windows 10 Home

Blender Version
Broken: Blender 2.8 4c5e76025d

Short description of error:
If a mesh object has a curve modifer applied to it and the curve is changed in object mode, the modifer will not update until some other action is taken place (E.G. Enter edit mode, change a modifier setting, etc)

Exact steps for others to reproduce the error:

  1. Download and open the attached file.
  2. Modify the curve in some way (move it, scale it, rotate it, etc.)
  3. Notice that the object does not update with these adjustments. If you enter edit mode, it'll update.

Extra things to note: If you edit the curve in edit mode, the mesh will update in realtime. This does not happen in object mode as discussed above.

Curves - #59785.blend

**System Information** CPU: Ryzen 5 2600 GPU: RX 570 4GB OS: Windows 10 Home **Blender Version** Broken: Blender 2.8 4c5e76025d83 **Short description of error:** If a mesh object has a curve modifer applied to it and the curve is changed in object mode, the modifer will not update until some other action is taken place (*E.G. Enter edit mode, change a modifier setting, etc*) **Exact steps for others to reproduce the error:** 1. Download and open the attached file. 2. Modify the curve in some way (*move it, scale it, rotate it, etc.*) 3. Notice that the object does not update with these adjustments. If you enter edit mode, it'll update. Extra things to note: If you edit the curve in edit mode, the mesh will update in realtime. This does not happen in object mode as discussed above. [Curves - #59785.blend](https://archive.blender.org/developer/F6042420/Curves_-_T59785.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by c509507714

This issue was referenced by c5095077148549b16d9eb72d56faa0427d51828e
Philipp Oeser self-assigned this 2018-12-28 14:09:13 +01:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59785
No description provided.