Fix T59785: Curve modifier does not update in realtime in object mode

Reviewers: brecht

Maniphest Tasks: T59785

Differential Revision: https://developer.blender.org/D4134